# mimg

./: Cargo.toml  License-MIT.md  Readme.md
src/: image.rs  lib.rs
src/filters/: filter.rs  kernel.rs  mod.rs
src/filters/morphological/: closing_filter.rs  mod.rs
src/io/: image_reader.rs  mod.rs
src/phantoms/: mod.rs  shepp_logan.rs
