[package]
name = "mimg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/MathijsdeBoer/mimg"
keywords = ["medical imaging", "image processing", "dicom"]
categories = ["mathematics", "science", "multimedia", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-linalg = "0.14.1"
ndarray-stats = "0.5.0"
ndarray-rand = "0.14.0"
dicom = "0.5.0"
